[FIX] mail: re-allign composer fields
The group displaying the recipients was not
made invisible when it is empty.
This added an empty div which broke the
``label: [field]`` ordering inside the flex-wrap.

The fields were too small relative to the unused space.

The visibility condition was updated
to reflect the visibility of the field.

The fields are made to occupy all
of the space given to them by the layout.

task #3007478

--- a/addons/mail/static/src/scss/composer.scss
+++ b/addons/mail/static/src/scss/composer.scss
@@ -62,8 +62,11 @@
 }
 
 .o_mail_composer_form {
-    .oe-bordered-editor[name=body] .o_readonly {
+    .oe-bordered-editor[name=body] {
         border: 1px solid $o-gray-300;
         padding: 4px;
+    }
+    .o_field_widget {
+        width: 100%;
     }
 }
